--- a/app/21card/views/cardorderlist.html
+++ b/app/21card/views/cardorderlist.html
@@ -40,10 +40,10 @@
                         <button type="button" class="btn btn-default" ng-click="open(section.end)"><i class="glyphicon glyphicon-calendar"></i></button>
                       </span>
                   </div>
-                  &nbsp;&nbsp;&nbsp;&nbsp;
+                  &nbsp;&nbsp;
 
 
-                  <button type="button" class="btn btn-default search pull-right" ng-click="searchinfo()">立即搜索</button>
+                  <button type="button" class="btn btn-default search pull-right" ng-click="load()">立即搜索</button>
 
               </div>   
 
