--- a/app/21card/views/issuecard.html
+++ b/app/21card/views/issuecard.html
@@ -1,5 +1,5 @@
 <form class="form-horizontal" role="form">
- <h2>记录发卡信息</h2>
+ <h2 class="text-center">记录发卡信息</h2>
  <div class="col-md-10 col-md-offset-1">
  <div class="panel panel-default">
  <div class="panel-body">
@@ -7,14 +7,15 @@
 
  <div class="form-group">
  <label for="inputDate" class="col-md-4 control-label">类型：</label>
- <label class="col-md-2 radio-inline ">
+ <div class="col-xs-8">
+ <label class="radio-inline ">
         <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="1" ng-model="userinfo.type">拿卡
         </label>
- <label class="col-md-2 radio-inline ">
+ <label class="radio-inline ">
             <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="2" ng-model="userinfo.type">退卡
         </label>
  </div>
- 
+ </div>
  <div class="form-group">
    <label for="inputDate" class="col-md-4 control-label">拿/退卡人姓名：</label>
    <div class="col-md-6">
@@ -45,11 +46,11 @@
  <div class="form-group">
  <label for="inputDate" class="col-sm-4 control-label">号段：</label>
  <div class="col-md-3">
- <input type="text" class="form-control" id="inputpoolname" placeholder="起始号段"
+ <input type="text" class="form-control" id="inputpoolname" placeholder="起始卡号"
       ng-model="userinfo.start_card_no">
  </div>
  <div class="col-md-3">
- <input type="text" class="form-control" id="inputpoolname" placeholder="起始号段"
+ <input type="text" class="form-control" id="inputpoolname" placeholder="结束卡号"
       ng-model="userinfo.end_card_no">
  </div>
  </div>
