--- a/app/21card/views/resivecardinfo.html
+++ b/app/21card/views/resivecardinfo.html
@@ -1,3 +1,4 @@
+
 <form class="form-horizontal" role="form"> 
 <h2>修改卡状态</h2>
 <div class="col-sm-12">
@@ -6,7 +7,7 @@
         <div class="form-group form-inline">
             <div class="col-sm-12">
                 <label>卡号</label>&nbsp;&nbsp;
-                <input type="text" class="form-control" ng-model="cardinfo.cardno" >
+                <input type="text" class="form-control" ng-model="cardinfo.cardno" style="width:300px">
                 &nbsp;&nbsp;&nbsp;&nbsp;
                   <button type="button" class="btn btn-default search pull-right" ng-click="queryuser()">查询</button>
 
