--- a/app/21card/views/activationcard.html
+++ b/app/21card/views/activationcard.html
@@ -1,239 +1,199 @@
-<div class="col-xs-12  hidden-xs">
-		<div class="row">
-			<!-- 左边 -->
-			<div class="col-xs-4"></div>
-			<div class="col-xs-4">
-				<div class="row">
-					<div class="col-xs-1"></div>
-					<form class=" form-inline">
-						<input type="text" 
-						class="form-control"
-						ng-model="mobile"
-						placeholder="请输入电话号码">
-
+<!-- PC端界面 -->
+<div class="col-xs-12 hidden-xs">
+	<div class="row">
+		<div class="col-xs-3  hidden-xs"></div>
+		<div class="col-xs-6">
+			<div class="panel panel-default ">
+			  	<div class="panel-heading text-center">
+			  		<h4>卡激活</h4>
+			  	</div>
+				<div class="panel-body">
+					<div class="col-xs-10">
+						<input 	type="text" 
+								class="form-control"
+								ng-model="mobile"
+								placeholder="请输入电话号码">
+					</div>
 				        <button type="button" 
-				        	class="btn btn-primary" 
-				        	ng-click="searchuser_info(mobile)">
-				        	搜索
+					        	class="btn btn-default col-xs-2" 
+					        	ng-click="searchuser_info(mobile)">
+					        搜索
 				        </button>
-					</form>
 				</div>
-				<br>
-				<br>
-				<div class="row">
-					
-					<div>
-						<table class="table table-bordered table-hover col-xs-10 col-sm-offset-1"
-						style="width: 80%" 
-						ng-if="user_info">
-						    <tr>
-						        <td class="col-xs-1">姓名</td>
-						        <td class="col-xs-4">{{user_info.username}}</td>
-						    </tr>
-						    <tr>
-						        <td class="col-xs-1">电话</td>
-						        <td class="col-xs-4">{{user_info.mobile}}</td>
-						    </tr>
-						    <tr>
-						        <td class="col-xs-1">身份证</td>
-						        <td class="col-xs-4">{{user_info.papersno}}</td>
-						    </tr>
-					    </table>
-					    <div class="col-xs-1"></div>
+				<table 	class="table" ng-if="user_info">
+					<tbody>
+					    <tr>
+					        <td class="text-right">姓名</td>
+					        <td>{{user_info.username}}</td>
+					    </tr>
+					    <tr>
+					        <td class="text-right">电话</td>
+					        <td>{{user_info.mobile}}</td>
+					    </tr>
+					    <tr>
+					        <td class="text-right">身份证</td>
+					        <td>{{user_info.papersno}}</td>
+					    </tr>
+					</tbody>
+				</table>
+				<div class="panel-body">
+					<div class="col-xs-2 text-right">
+						<h4>卡号:</h4>
 					</div>
-					
+    				<div class="col-xs-10">
+      					<input 	type="text" 
+	      						class="form-control"
+	      						ng-model="card_num" 
+	      						placeholder="请输入卡号">
+    				</div>
 				</div>
-
-				<div class="row">
-					<form class=" form-inline ">
-						<div class="col-xs-12">
-							<label class="col-xs-2 control-label">
-								<h4>卡号</h4>
-							</label>
-		    				<div class="col-xs-10">
-		      					<input type="text" 
-		      						class="form-control"
-		      						ng-model="card_num" 
-		      						placeholder="请输入卡号">
-		    				</div>
-						</div>
-					
-						<div class="col-xs-12">
-
-							<label class="col-xs-2 control-label">
-								<h4>密码</h4>
-							</label>
-
-		    				<div class="col-xs-10">
-		      					<input type="password" 
-		      						class="form-control" 
-		      						placeholder="请输入密码">
-		    				</div>
-
-						</div>
-					</form>
-				</div>
-				<br>
-				<br>
-				<br>
-				<div class="row">
-					<div class="col-xs-12 ">
-						<button type="button" 
-							class="btn btn-primary col-xs-offset-1" 
-							ng-click="searchcard_product(card_num)">
-					        查看可以激活的产品
-					    </button>
+				<div class="panel-body">
+					<div class="col-xs-2 text-right">
+						<h4>密码:</h4>
 					</div>
-					<br>
-					<br>
-					<div class="col-xs-12"
-						ng-if="card_product[0].name">
-						<table class="table table-bordered table-hover" >
-							<tr>
-								<td>产品</td>
-								<td>激活</td>
-							</tr>
-					     	<tr ng-repeat="obj in card_product">
-						        <td>
-						        	{{obj.name}}
-						        </td>
-						        <td>
-					        		<button ng-click="expression" class="btn btn-primary btn-sm" ng-click="creat($index)">选择此产品</button>
-					        	</td>
-					     	</tr>
-				    	</table>
-				    	<div>
-				    		<button type="button" 
-				    			class="btn btn-primary " 
-				    			ng-click="active_product(user_info.userid,card_num,card_password)">
-				    			激 活
-				    		</button>
-				    	</div>
-					</div>
+    				<div class="col-xs-10">
+      					<input 	type="password" 
+	      						class="form-control" 
+	      						ng-model="card_password" 
+	      						placeholder="请输入密码">
+    				</div>
 				</div>
-				
-			</div>
-			<!-- 右边 -->
-			<div class="col-xs-4 hidden-xs">
-			</div>
-		</div>
-</div>
-
-
-<div class="col-xs-12  visible-xs-block">
-		<div class="row">
-			<!-- 左边 -->
-			<div class="col-xs-12">
-				<div class="row">
-					<form class="text-center">
-						<input type="text" 
-						class="form-control col-xs-offset-1"
-						style="width: 85%" 
-						ng-model="mobile"
-						placeholder="请输入电话号码">
-
-				        <button type="button" 
-				        	class="btn btn-primary  col-xs-offset-1"
-				        	style="float: left;" 
-				        	ng-click="searchuser_info(mobile)">
-				        	搜索
-				        </button>
-					</form>
-				</div>
-				<br>
-				<br>
-				<div class="row">
-					
-					<div>
-						<table class="table table-bordered table-hover col-xs-10 col-xs-offset-1"
-						style="width: 80%" 
-						ng-if="user_info">
-						    <tr>
-						        <td class="col-xs-1">姓名</td>
-						        <td class="col-xs-4">{{user_info.username}}</td>
-						    </tr>
-						    <tr>
-						        <td class="col-xs-1">电话</td>
-						        <td class="col-xs-4">{{user_info.mobile}}</td>
-						    </tr>
-						    <tr>
-						        <td class="col-xs-1">身份证</td>
-						        <td class="col-xs-4">{{user_info.papersno}}</td>
-						    </tr>
-					    </table>
-					    <div class="col-xs-1"></div>
-					</div>
-					
-				</div>
-
-				<div class="row">
-					<form class=" form-inline ">
-						<div class="col-xs-12">
-							<label class="col-xs-2 control-label">
-								<h4>卡号</h4>
-							</label>
-		    				<div class="col-xs-10">
-		      					<input type="text" 
-		      						class="form-control"
-		      						ng-model="card_num" 
-		      						placeholder="请输入卡号">
-		    				</div>
-						</div>
-					
-						<div class="col-xs-12">
-
-							<label class="col-xs-2 control-label">
-								<h4>密码</h4>
-							</label>
-
-		    				<div class="col-xs-10">
-		      					<input type="password" 
-		      						class="form-control" 
-		      						placeholder="请输入密码">
-		    				</div>
-
-						</div>
-					</form>
-				</div>
-				<br>
-				<br>
-				<br>
-				<div class="row">
-					<div class="col-xs-12">
-						<button type="button" 
+				<div class="panel-body">
+					<button type="button" 
 							class="btn btn-primary " 
 							ng-click="searchcard_product(card_num)">
-					        查看可以激活的产品
-					    </button>
-					</div>
-					<br>
-					<br>
-					<div class="col-xs-12"
-						ng-if="card_product[0].name">
-						<table class="table table-bordered table-hover" >
-							<tr>
-								<td>产品</td>
-								<td>激活</td>
-							</tr>
-					     	<tr ng-repeat="obj in card_product">
-						        <td>
-						        	{{obj.name}}
-						        </td>
-						        <td>
-					        		<button ng-click="expression" class="btn btn-primary btn-sm" ng-click="creat($index)">选择此产品</button>
-					        	</td>
-					     	</tr>
-				    	</table>
-				    	<div class="text-center">
-				    		<button type="button" 
-				    			class="btn btn-primary " 
-				    			ng-click="active_product(user_info.userid,card_num,card_password)">
-				    			激 活
-				    		</button>
-				    	</div>
-					</div>
+			        	查看可以激活的产品
+					</button>
 				</div>
-				
+				<table class="table" ng-if="card_product[0].name">
+					<tbody>
+						<tr>
+							<td class="text-right">产品</td>
+							<td>激活</td>
+						</tr>
+				     	<tr ng-repeat="obj in card_product">
+					        <td class="text-right">
+					        	{{obj.name}}
+					        </td>
+					        <td class="text-right" ng-show="false">
+					        	{{obj.code}}
+					        </td>
+					        <td>
+				        		<button class="btn btn-warning" 
+				        				ng-click="active_product(obj.code)"
+				        				ng-disabled="opened">
+				        			激 活
+				        		</button>
+				        	</td>
+				     	</tr>
+					</tbody>
+				</table>
 			</div>
 		</div>
+		<div class="col-xs-3  hidden-xs"></div>
+	</div>
+</div>
+
+<!-- 手机端界面 -->
+<div class="col-xs-12  visible-xs-block">
+	<div class="row">
+		<div class="panel panel-default ">
+			<div class="panel-body">
+				<div class=" col-xs-10">
+					<input 	type="text" 
+							class="form-control"
+							ng-model="mobile"
+							placeholder="请输入电话号码">
+				</div>
+			        <button type="button" 
+				        	class="btn btn-info col-xs-2"
+				        	style="float: left;" 
+				        	ng-click="searchuser_info(mobile)">
+			        	搜索
+			        </button>
+			</div>
+			<br>
+			<br>
+			<div class="row">
+				<div class="text-center">
+					<table class="table table-bordered table-hover col-xs-10 "
+							ng-if="user_info">
+					    <tr>
+					        <td class="col-xs-1">姓名</td>
+					        <td class="col-xs-4">{{user_info.username}}</td>
+					    </tr>
+					    <tr>
+					        <td class="col-xs-1">电话</td>
+					        <td class="col-xs-4">{{user_info.mobile}}</td>
+					    </tr>
+					    <tr>
+					        <td class="col-xs-1">身份证</td>
+					        <td class="col-xs-4">{{user_info.papersno}}</td>
+					    </tr>
+				    </table>
+				    <div class="col-xs-1"></div>
+				</div>
+			</div>
+			<div class="row">
+				<form class=" form-inline ">
+					<div class="col-xs-12">
+						<label class="col-xs-2 control-label">
+							<h4>卡号</h4>
+						</label>
+	    				<div class="col-xs-10">
+	      					<input 	type="text" 
+		      						class="form-control"
+		      						ng-model="card_num" 
+		      						placeholder="请输入卡号">
+	    				</div>
+					</div>
+					<div class="col-xs-12">
+						<label class="col-xs-2 control-label">
+							<h4>密码</h4>
+						</label>
+	    				<div class="col-xs-10">
+	      					<input 	type="password" 
+		      						class="form-control" 
+		      						placeholder="请输入密码">
+	    				</div>
+					</div>
+				</form>
+			</div>
+			<br>
+			<div class="row">
+				<div class="col-xs-12 text-center">
+					<button type="button" 
+							class="btn btn-primary " 
+							ng-click="searchcard_product(card_num)">
+				        查看可以激活的产品
+				    </button>
+				</div>
+				<br>
+				<br>
+				<table class="table" ng-if="card_product[0].name">
+					<tbody>
+						<tr>
+							<td class="text-right">产品</td>
+							<td>激活</td>
+						</tr>
+				     	<tr ng-repeat="obj in card_product">
+					        <td class="text-right">
+					        	{{obj.name}}
+					        </td>
+					        <td class="text-right" ng-show="false">
+					        	{{obj.code}}
+					        </td>
+					        <td>
+				        		<button class="btn btn-warning" 
+				        				ng-click="active_product(obj.code)"
+				        				ng-disabled="opened">
+				        			激 活
+				        		</button>
+				        	</td>
+				     	</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+	</div>
 </div>
