--- a/app/21card/views/activationcard.html
+++ b/app/21card/views/activationcard.html
@@ -154,6 +154,7 @@
 	    				<div class="col-xs-10">
 	      					<input 	type="password" 
 		      						class="form-control" 
+	      							ng-model="card_password" 
 		      						placeholder="请输入密码">
 	    				</div>
 					</div>
