--- a/app/21card/views/batchnumber.html
+++ b/app/21card/views/batchnumber.html
@@ -1,25 +1,29 @@
 <div class="col-xs-12 col-xs-offset-0" >
- <div class="panel panel-success">
+ <div class="panel panel-default">
  <div class="panel-heading text-center">设置批次号</div>
  <div class="panel-body">
     <div class="container-fluid form-horizontal ">
 
 <div class="col-xs-12 form-horizontal" >
-  <div class="form-group">
-    <label for="inputLottry" class="col-md-1 control-label">号段：</label>
-    <div class="col-xs-3">
+  <div class="form-group form-inline">
+    
+    <label for="inputLottry" class="col-md-0 control-label" style="width:100px">号段：</label>
 	 <input type="text" class="form-control" placeholder="起始卡号"
-			ng-model="cardnuminfo.scard">
-    </div>
-	<div class="col-xs-3">
+			ng-model="cardnuminfo.scard" style="width:250px">
+     <label>到</label>
 	 <input type="text" class="form-control" placeholder="结束卡号"
-			ng-model="cardnuminfo.ecard">
-	</div>
-	<label for="inputLottry" class="col-md-3 control-label">数量</label>
-	<div class="col-xs-2">
-	 <p id="disabledInput" type="text" class="form-control" id="inputLottry" placeholder="数量" disabled ng-model="cardinfo.sumcard">{{cardnuminfo.ecard - cardnuminfo.scard + 1}} 
+			ng-model="cardnuminfo.ecard" style="width:250px">
+
+	 <label for="inputLottry" class="control-label" style="width:100px">数量：</label>
+	 
+     <p id="disabledInput" type="text" class="form-control" id="inputLottry" placeholder="数量" disabled ng-model="cardinfo.sumcard" style="width:250px">{{cardnuminfo.ecard - cardnuminfo.scard + 1}} 
 	 </p>
-	</div>       
+	 
+
+	
+	
+	  
+	     
   </div>
 </div>
 
@@ -33,25 +37,24 @@
 <div class="col-md-12">
 <div class="panel panel-default">
     <div class="panel-body">
+    <div class="col-xs-12 form-horizontal" >
         <div class="form-group form-inline">
             <div class="col-md-12">
-              <label class="col-md-1 radio-inline ">
+              <label class="col-md-0 radio-inline ">
               <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="0" ng-model="cardinfo.cardstatu">单张</label>
-              <input type="text" class="col-md-2 form-control" id="inputLottry" placeholder="卡号"
-                   ng-model="cardinfo.cardnum">
-              <div>
-              <label class="col-md-1 col-md-offset-1 radio-inline ">
+              <input type="text" class="form-control" id="inputLottry" placeholder="卡号"
+                   ng-model="cardinfo.cardnum" style="width:250px">
+              <label class="col-md-0 col-md-offset-1 radio-inline ">
               <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="1" ng-model="cardinfo.cardstatu">卡段</label>
-              </div>
-              <input type="text" class="form-control" id="inputLottry" placeholder="起始卡号"
-                   ng-model="cardinfo.startcard" style="width:250px">
-              <input type="text" class="form-control" id="inputLottry" placeholder="结束卡号"
-                   ng-model="cardinfo.endcard" style="width:250px">
-  
-               <button type="button" class="btn btn-default search pull-right" ng-click="setbatch()">确定设置</button>
+              <input type="text" class="form-control" id="inputLottry" placeholder="起始卡号" ng-model="cardinfo.startcard" style="width:250px">
+              <label>到</label>
+              <input type="text" class="form-control" id="inputLottry" placeholder="结束卡号"ng-model="cardinfo.endcard" style="width:250px">
+          
+               <button type="button" class="btn btn-info search pull-right" ng-click="setbatch()">确定设置</button>
 
 
             </div>
+        </div>
         </div>
     </div>
 </div><!-- searchArea -->
