--- a/app/21card/views/cardcomplete.html
+++ b/app/21card/views/cardcomplete.html
@@ -1,5 +1,5 @@
 <div class="col-xs-12 col-xs-offset-0" >
- <div class="panel panel-success">
+ <div class="panel panel-default">
  <div class="panel-heading text-center">更改制作状态</div>
  <div class="panel-body">
     <div class="container-fluid form-horizontal ">
@@ -33,20 +33,22 @@
 <div class="col-md-12">
 <div class="panel panel-default">
     <div class="panel-body">
-        <div class="form-group form-inline">
+    <div class="container-fluid form-horizontal ">
+        
             <div class="col-sm-12">
-
-              <label class="col-md-1 radio-inline ">
+              <div class="form-group form-inline">
+              <label class="col-md-0 radio-inline ">
               <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="0" ng-model="cardinfo.cardstatu">单张</label>
-              <input type="text" class="col-md-2 form-control" id="inputLottry" placeholder="卡号"
-                   ng-model="cardinfo.cardnum">
-              <div>
-              <label class="col-md-1 col-md-offset-1 radio-inline ">
+              <input type="text" class="form-control" id="inputLottry" placeholder="卡号"
+                   ng-model="cardinfo.cardnum" style="width:250px">
+              
+              <label class="col-md-0 col-md-offset-1 radio-inline ">
               <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="1" ng-model="cardinfo.cardstatu">卡段</label>
-              </div>
-              <input type="text" class="form-control" id="inputLottry" placeholder="起始卡号"ng-model="cardinfo.startcard">
-              <input type="text" class="form-control" id="inputLottry" placeholder="结束卡号"ng-model="cardinfo.endcard">
-              <button type="button" class="btn btn-default search pull-right" ng-click="change()">制作完成</button>
+              
+              <input type="text" class="form-control" id="inputLottry" placeholder="起始卡号"ng-model="cardinfo.startcard" style="width:250px">
+              <label>到</label>
+              <input type="text" class="form-control" id="inputLottry" placeholder="结束卡号"ng-model="cardinfo.endcard" style="width:250px">
+              <button type="button" class="btn btn-info search pull-right" ng-click="change()">制作完成</button>
 
 
             </div>
