--- a/app/21card/views/releasecard.html
+++ b/app/21card/views/releasecard.html
@@ -5,16 +5,20 @@
 	  <div class="panel panel-default">
 	    <div class="panel-body form-inline">
 		    <label for="inputLottry" class="control-label">总卡片数量</label>
-		    <input class="form-control wid20 input-sm text-center" id="disabledInput" type="text" placeholder="" disabled ng-model="cardinfo.allcard">
-		    <label for="inputLottry" class="control-label">未使用数量</label>
+		    <input class="form-control wid20 input-sm text-center" id="disabledInput" type="text" placeholder="" disabled ng-model="cardinfo.allcard" >
+		    <label for="inputLottry" class="col-md-offset-2 control-label">未使用数量</label>
 		    <input class="form-control wid20 input-sm text-center" id="disabledInput" type="text" placeholder="" disabled ng-model="cardinfo.can_use_card">
+
+		    <div>
 		    <label for="inputLottry" class="control-label">已锁定数量</label>
 		    <input class="form-control wid20 input-sm text-center" id="disabledInput" type="text" placeholder="" disabled ng-model="cardinfo.lock_card">
-		    <label for="inputLottry" class="control-label">已使用数量</label>
+		    <label for="inputLottry" class="col-md-offset-2 control-label">已使用数量</label>
 		    <input class="form-control wid20 input-sm text-center" id="disabledInput" type="text" placeholder="" disabled ng-model="cardinfo.used_card">
+		    </div>
+
 		    <label for="inputLottry" class="control-label">已失效数量</label>
 		    <input class="form-control wid20 input-sm text-center" id="disabledInput" type="text" placeholder="" disabled ng-model="cardinfo.not_avail_card">
-		    <label for="inputLottry" class="control-label">已释放数量</label>
+		    <label for="inputLottry" class="col-md-offset-2 control-label">已释放数量</label>
 		    <input class="form-control wid20 input-sm text-center" id="disabledInput" type="text" placeholder="" disabled ng-model="cardinfo.release_card">
 	    </div>
 	  </div>
@@ -22,16 +26,19 @@
   <div class="col-sm-6">
 	  <div class="panel panel-default">
 	    <div class="panel-body">
-	    	<div class="form-group form-inline mb0">
+	    	<div class="form-group form-inline mb5">
 	    		<div class="col-sm-12">
-			      <input type="text" class="form-control" ng-model="typecard.startnum" placeholder="起始卡号" style="width:250px">
-			      <input type="text" class="form-control" ng-model="typecard.endnum" placeholder="结束卡号" style="width:250px">        
+	    		  <div class="row">
+			      <input type="text" class="form-control" ng-model="typecard.startnum" placeholder="起始卡号" style="width:200px">
+			      <input type="text" class="col-md-offset-1 form-control" ng-model="typecard.endnum" placeholder="结束卡号" style="width:200px">  
+                  </div>
+			      <div class="row mt10">      
 			      <select class="form-control" ng-model="typecard.card_status" ng-options="state.code as state.name for state in state" style="width:200px"></select>
-			      <select class="form-control" ng-model="typecard.card_giveout_target" ng-options = "info.card_giveout_target as info.card_giveout_target for info in targetinfo" style="width:200px"> 
+			      <select class="col-md-offset-1 form-control" ng-model="typecard.card_giveout_target" ng-options = "info.card_giveout_target as info.card_giveout_target for info in targetinfo" style="width:200px"> 
 			      <option value="">全部</option>  
                   </select>
-			      
 			      <button type="button" class="btn btn-info new" ng-click="search()" style="width:100px">搜索</button>
+			      </div>
 			    </div>
 		    </div>
 	    </div>
@@ -86,23 +93,7 @@
 	 </table>
 </div>	
 
-<div class="text-right">
 
-    <uib-pagination 
-      total-items="bigTotalItems" 
-      ng-model="bigCurrentPage" 
-      max-size="maxSize" 
-      class="pagination-sm" 
-      boundary-links="true" 
-      ng-change="load()"
-      items-per-page="itemsPerPage"
-      previous-text="上一页"
-      next-text="下一页"
-      first-text="首页"
-      last-text="末页"
-      rotate="false">
-    </uib-pagination>
-</div> 
 </div>
 
 </form>
