--- a/app/21card/views/reviseinfo.html
+++ b/app/21card/views/reviseinfo.html
@@ -1,5 +1,5 @@
 <div class="col-xs-12 col-xs-offset-0" >
- <div class="panel panel-success">
+ <div class="panel panel-default">
  <div class="panel-heading text-center">修改卡池信息</div>
  <div class="panel-body">
     <div class="container-fluid form-horizontal ">
