--- a/app/21card/views/cardcomplete.html
+++ b/app/21card/views/cardcomplete.html
@@ -5,7 +5,7 @@
     <div class="container-fluid form-horizontal ">
 
 <div class="col-xs-12 form-horizontal" >
-  <div class="form-group">
+  <div class="form-group form-inline">
     <label for="inputLottry" class="col-md-1 control-label">号段：</label>
     <div class="col-xs-3">
 	 <input type="text" class="form-control" placeholder="起始卡号"
