--- a/app/22busscustomer/views/skacountlist.html
+++ b/app/22busscustomer/views/skacountlist.html
@@ -37,12 +37,13 @@
         <th class="col-md-1 text-center">姓名</th>
         <th class="col-md-1 text-center">手机号</th>
         <th class="col-md-2 text-center">身份证号</th>
+        <th class="col-md-2 text-center">账号</th>
         <th class="col-md-1 text-center">区域</th>
         <th class="col-md-1 text-center">行业</th>
         <th class="col-md-1 text-center">申请时间</th>
         <th class="col-md-1 text-center">状态</th>
         <th class="col-md-1 text-center">短信状态</th>
-        <th class="col-md-2 text-center">操作</th>
+        <th class="col-md-1 text-center">操作</th>
       </tr>
     </thead>
     <tbody>
@@ -50,6 +51,7 @@
         <td class="text-center">{{obj.name}}</td>
         <td class="text-center">{{obj.mobile}}</td>
         <td class="text-center">{{obj.idcard}}</td>
+        <td class="text-center">{{obj.ticket_id}}</td>
         <td class="text-center">{{obj.area}}</td>
         <td class="text-center">{{obj.trade}}</td>
         <td class="text-center">{{obj.ins_time}}</td>
@@ -57,7 +59,7 @@
         <td class="text-center">{{obj.sms_state}}</td>
         <td class="text-center">
            <a ng-show="obj.state=='未处理'" ng-click="pass(obj.id)" class="btn btn-danger btn-xs">通过</a>
-           
+           <a ng-show="obj.state=='未处理'" ng-click="refuse(obj.id)" class="btn btn-danger btn-xs">拒绝</a>
            <a ng-show="obj.state=='已通过' && obj.sms_state =='未发送'" ng-click="creataccount(obj.id,loginuser.company_id,loginuser.company_code,loginuser.office_id)" class="btn btn-success btn-xs">创建账号</a>
            <a ng-show="obj.sms_state=='已发送'" ng-click="sendmessage(obj.id,loginuser.company_id,loginuser.company_code,loginuser.office_id)" class="btn btn-info btn-xs">发送短信</a>
         </td>
