--- a/app/21card/views/cardpoollist.html
+++ b/app/21card/views/cardpoollist.html
@@ -32,7 +32,7 @@
 	        <td class="col-md-2 text-center">{{cardpool.pool_name}}</td>
 	        <td class="col-md-2 text-center">{{cardpool.pool_type_name}}</td>
 	        <td class="col-md-2 text-center">
-	        	<button type="button" class="btn btn-default btn-xs" ng-click="resivepoolinfo(cardpool.pool_code, cardpool.pool_name)">修改</button>
+	        	<button type="button" class="btn btn-default btn-xs" ng-click="resivepoolinfo(cardpool.pool_code, cardpool.pool_name,cardpool.pool_type_name)">修改</button>
 	        </td>
 	        <td class="col-md-4 text-center">
 	        	
