--- a/app/21card/views/reviseinfo.html
+++ b/app/21card/views/reviseinfo.html
@@ -14,7 +14,7 @@
 		<label for="inputDate" class="col-md-2 control-label">卡池类型</label>
 		<div class="col-md-2">
             <select class="form-control" ng-model="cardinfo.pool_type">
-               <option value="0">普通卡</option>
+               <option value="0">基本</option>
                <option value="1">金卡</option>
             <select>  
         </div>
