--- a/app/21card/views/addcardpool.html
+++ b/app/21card/views/addcardpool.html
@@ -1,5 +1,5 @@
 <div class="col-xs-12" >
-<div class="panel panel-success">
+<div class="panel panel-default">
   <div class="panel-heading text-center">添加卡池</div>
 
 <div class="panel-body">
@@ -7,7 +7,7 @@
 
 <div class="col-xs-10 col-xs-offset-0 form-horizontal" >
 	<div class="form-group">
-		<label class="col-xs-3 control-label">卡池名称</label>
+		<label class="col-xs-3 control-label">卡池名称:</label>
 		<div class="col-xs-9">
 			<input type="text" class="form-control" 
 			ng-model="cardinfo.pool_name"
@@ -16,7 +16,7 @@
 	</div>
 
 	<div class="form-group">
-	<label class="col-xs-3 control-label">卡池类型</label>
+	<label class="col-xs-3 control-label">卡池类型:</label>
 	  <div class="col-xs-9">
          <select class="form-control" ng-model="cardinfo.pool_type">
             <option value="0">普通卡</option>
@@ -25,7 +25,7 @@
       </div>  
     </div>
 
-    <button type="button" class="btn btn-default search pull-right" ng-click="savecardpool()">添加卡池</button>
+    <button type="button" class="btn btn-info search pull-right" ng-click="savecardpool()">添加卡池</button>
 	
 </div>
 
