--- a/app/21card/views/addcard.html
+++ b/app/21card/views/addcard.html
@@ -6,16 +6,16 @@
 
 <div class="col-xs-12 form-horizontal" >
   <div class="form-group form-inline">
-		<label class="col-xs-0 col-md-offset-1 radio-inline ">
+		<label class="col-xs-0 col-md-offset-1 radio-inline" vertical-align="middle">
         <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="2" ng-model="cardinfo.type">单张</label>
 		<input type="text" class="form-control" placeholder="卡号"
 			ng-model="cardinfo.cardnum" style="width:200px">
 		<label class="col-md-0 col-md-offset-1 radio-inline ">
              <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="1" ng-model="cardinfo.type">卡段</label>
-		<input type="text" class="form-control" placeholder="起始卡号"
+		<input type="text" class="form-control mt10" placeholder="起始卡号"
 			ng-model="cardinfo.startnum" style="width:200px">
-		<label>到</label>
-		<input type="text" class="form-control" placeholder="结束卡号"
+		<label>--</label>&nbsp;&nbsp;
+		<input type="text" class="form-control mt10" placeholder="结束卡号"
 			ng-model="cardinfo.endnum" style="width:200px">
         <button type="button" class="btn btn-info col-xs-offset-1" ng-click="addcardbtn()" style="width:100px;">添加卡<button> 
   </div>
@@ -30,13 +30,11 @@
 
 
 
-<form class="form-horizontal" role="form">
-<div class="form-group">
-<div class="col-md-4 col-md-offset-1 panel panel-default table-responsive">
-     <table ng-click="getlist()" class="table table-bordered">
+     <div class="col-sm-5">
+     <table class="table table-bordered panel panel-default table-responsive">
 	    <thead>
 	      <tr>
-	        <th class="col-md-2 text-center">操作</th>
+	        <th class="col-md-1 text-center">操作</th>
 	        <th class="col-md-2 text-center">起始卡号</th>
 	        <th class="col-md-2 text-center">结束卡号</th>
 	        
@@ -52,6 +50,6 @@
 	     </tr>
 	    </tbody>
 	 </table>
-</div><!-- 可用卡 -->
-</form>
+	 </div>
+
 
