--- a/app/21card/views/cardcomplete.html
+++ b/app/21card/views/cardcomplete.html
@@ -6,12 +6,12 @@
  <div class="col-xs-12 form-horizontal" >
    <div class="form-group form-inline">
     
-    <label for="inputLottry" class="col-md-2 control-label row mt10">号段：</label>
+    <label for="inputLottry" class="col-md-2 control-label row mt10" margin-left="200px">号段：</label>
     
     
 	<input type="text" class="form-control" placeholder="起始卡号"
 			ng-model="card.scard" style="width:200px">
-    <label>到</label>
+    <label class="">到</label>
 	
 	<input type="text" class="form-control" placeholder="结束卡号"
 			ng-model="card.ecard" style="width:200px">
