--- a/app/21card/views/addcard.html
+++ b/app/21card/views/addcard.html
@@ -1,30 +1,26 @@
-<div class="col-xs-12 col-xs-offset-0" >
- <div class="panel panel-default">
- <div class="panel-heading text-center">添加卡</div>
- <div class="panel-body">
-    <div class="container-fluid form-horizontal ">
-
-<div class="col-xs-12 form-horizontal" >
-  <div class="form-group form-inline">
+<div class="col-xs-12" >
+<div class="panel panel-default">
+<div class="panel-heading text-center">添加卡</div>
+<div class="panel-body">
+    <div class="form-group form-inline">
 		<label class="col-xs-0 col-md-offset-1 radio-inline" vertical-align="middle">
-        <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="2" ng-model="cardinfo.type">单张</label>
+        <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="2" ng-model="cardinfo.type">单张</label>&nbsp;&nbsp;
 		<input type="text" class="form-control" placeholder="卡号"
 			ng-model="cardinfo.cardnum" style="width:200px">
-		<label class="col-md-0 col-md-offset-1 radio-inline ">
-             <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="1" ng-model="cardinfo.type">卡段</label>
-		<input type="text" class="form-control mt10" placeholder="起始卡号"
+		<label class="col-md-offset-1 radio-inline ">
+             <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="1" ng-model="cardinfo.type">卡段</label>&nbsp;&nbsp;
+		<input type="text" class="form-control" placeholder="起始卡号"
 			ng-model="cardinfo.startnum" style="width:200px">
-		<label>--</label>&nbsp;&nbsp;
-		<input type="text" class="form-control mt10" placeholder="结束卡号"
+		&nbsp;&nbsp;<label>到</label>&nbsp;&nbsp;
+		<input type="text" class="form-control" placeholder="结束卡号"
 			ng-model="cardinfo.endnum" style="width:200px">
         <button type="button" class="btn btn-info col-xs-offset-1" ng-click="addcardbtn()" style="width:100px;">添加卡<button> 
-  </div>
+    </div>
+</div>
+</div>
+</div>
 </div>
 
-</div>
-</div>
-</div>
-</div>
 
 
 
@@ -42,7 +38,7 @@
 	    </thead>
 	    <tbody>
 	     <tr ng-repeat = "cardinfo in cardinfos">
-           <td class="col-md-2 text-center"> 
+           <td class="col-md-1 text-center"> 
            <input type="checkbox" ng-model=cardinfo.value ng-true-value="1"ng-false-value="0" ng-click="checkcardinfo()">
            </td>
 	       <td class="col-md-2 text-center">{{cardinfo.mincard}}</td>
