--- a/app/21card/views/batchnumber.html
+++ b/app/21card/views/batchnumber.html
@@ -1,63 +1,42 @@
-<div class="col-xs-12 col-xs-offset-0" >
- <div class="panel panel-default">
- <div class="panel-heading text-center">设置批次号</div>
- <div class="panel-body">
- <div class="container-fluid form-horizontal ">
- <div class="col-xs-12 form-horizontal" >
-  <div class="form-group form-inline">
-    
-    <label for="inputLottry" class="col-md-2 control-label row mt10">号段：</label>
-	 <input type="text" class="form-control" placeholder="起始卡号"
-			ng-model="cardnuminfo.scard" style="width:200px">
-     <label>到</label>
-	 <input type="text" class="form-control" placeholder="结束卡号"
-			ng-model="cardnuminfo.ecard" style="width:200px">
-
-	 <label for="inputLottry" class="col-xs-offset-3 control-label" >数量：</label>
-	 <label>:</label>
-     <p id="disabledInput" type="text" class="form-control row mt15" id="inputLottry" placeholder="数量" disabled ng-model="cardinfo.sumcard" style="width:200px">{{cardnuminfo.ecard - cardnuminfo.scard + 1}} 
-	 </p>
-	 
-
-	
-	
-	  
-	     
-  </div>
-</div>
-
+<div class="col-xs-12" >
+<div class="panel panel-default">
+<div class="panel-heading text-center">设置批次号</div>
+<div class="panel-body">
+    <div class="form-group form-inline"> 
+        <label for="inputLottry" class="col-xs-0 col-md-offset-1 control-label">号段</label>&nbsp;&nbsp;
+	    <input type="text" class="form-control" placeholder="起始卡号"
+			disabled ng-model="cardnuminfo.scard" style="width:200px">
+        &nbsp;&nbsp;<label>到</label>&nbsp;&nbsp;
+	    <input type="text" class="form-control" placeholder="结束卡号"
+			disabled ng-model="cardnuminfo.ecard" style="width:200px">
+	    <label for="inputLottry" class="col-xs-offset-3 control-label">数量</label>&nbsp;&nbsp;
+        <p id="disabledInput" type="text" class="form-control mt10" id="inputLottry" placeholder="数量" disabled ng-model="cardinfo.sumcard" style="width:200px">{{cardnuminfo.ecard - cardnuminfo.scard + 1}} 
+	    </p>     
+    </div>
 </div>
 </div>
 </div>
 </div>
 
 
-<form class="form-horizontal" role="form">
+
 <div class="col-md-12">
 <div class="panel panel-default">
-    <div class="panel-body">
-    <div class="col-xs-12 form-horizontal" >
-        <div class="form-group form-inline">
-            <div class="col-md-12">
-              <label class="col-md-0 radio-inline ">
-              <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="0" ng-model="cardinfo.cardstatu">单张</label>
-              <input type="text" class="form-control" id="inputLottry" placeholder="卡号"
-                   ng-model="cardinfo.cardnum" style="width:250px">
-              <label class="col-md-0 col-md-offset-1 radio-inline ">
-              <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="1" ng-model="cardinfo.cardstatu">卡段</label>
-              <input type="text" class="form-control" id="inputLottry" placeholder="起始卡号" ng-model="cardinfo.startcard" style="width:250px">
-              <label>到</label>
-              <input type="text" class="form-control" id="inputLottry" placeholder="结束卡号"ng-model="cardinfo.endcard" style="width:250px">
-          
-               <button type="button" class="btn btn-info search pull-right" ng-click="setbatch()">确定设置</button>
-
-
-            </div>
-        </div>
-        </div>
+<div class="panel-body">
+    <div class="form-group form-inline">
+        <label class="col-md-0 radio-inline ">
+        <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="0" ng-model="cardinfo.cardstatu">单张</label>&nbsp;&nbsp;
+        <input type="text" class="form-control" id="inputLottry" placeholder="卡号" ng-model="cardinfo.cardnum" style="width:250px">
+        <label class="col-md-0 col-md-offset-1 radio-inline ">
+        <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="1" ng-model="cardinfo.cardstatu">卡段</label>&nbsp;&nbsp;
+        <input type="text" class="form-control" id="inputLottry" placeholder="起始卡号" ng-model="cardinfo.startcard" style="width:250px">
+        &nbsp;&nbsp;<label>到</label>&nbsp;&nbsp;
+        <input type="text" class="form-control" id="inputLottry" placeholder="结束卡号"ng-model="cardinfo.endcard" style="width:250px">
+        <button type="button" class="btn btn-info search pull-right" ng-click="setbatch()">确定设置</button>
     </div>
+</div>
+</div>
 </div><!-- searchArea -->
 
 
 
-</form>
