--- a/app/21card/views/cardproduct.html
+++ b/app/21card/views/cardproduct.html
@@ -1,5 +1,5 @@
 <div class="col-xs-12" >
-<div class="panel panel-success">
+<div class="panel panel-default">
   <div class="panel-heading">卡产品信息</div>
 
 <div class="panel-body">
@@ -171,7 +171,7 @@
 
 	<button 
     type="button" 
-    class="btn btn-success btn-lg col-xs-3 pull-right" 
+    class="btn btn-info col-xs-1 pull-right" 
     ng-click="gogo()"
     >
     提交
@@ -226,7 +226,7 @@
         <div class="col-xs-2" >
         	<button 
 		    type="button" 
-		    class="btn btn-success btn-block pull-right" 
+		    class="btn btn-success pull-right" 
 		    ng-click="resourcesok()"
 		    >
 		    添加
@@ -284,7 +284,7 @@
 		<div class="col-xs-2" >
         	<button 
 		    type="button" 
-		    class="btn btn-success btn-block pull-right" 
+		    class="btn btn-success pull-right" 
 		    ng-click="cardpoolok()"
 		    >
 		    添加
@@ -343,7 +343,7 @@
 		<div class="col-xs-2" >
         	<button 
 		    type="button" 
-		    class="btn btn-success btn-block pull-right" 
+		    class="btn btn-success pull-right" 
 		    ng-click="ticketok()"
 		    >
 		    添加
@@ -370,7 +370,7 @@
 
 	<button 
     type="button" 
-    class="btn btn-success btn-lg col-xs-3 pull-right" 
+    class="btn btn-info col-xs-1 pull-right" 
     ng-click="gogo()"
     >
     提交
