--- a/app/21card/views/reviseinfo.html
+++ b/app/21card/views/reviseinfo.html
@@ -18,7 +18,7 @@
                <option value="1">金卡</option>
             <select>  
         </div>
-        <button type="button" class="btn btn-default col-xs-offset-1" ng-click="savecardpool()" style="width:200px;">修改<button>
+        <button type="button" class="btn btn-info col-xs-offset-1" ng-click="savecardpool()" style="width:200px;">修改<button>
          
   </div>
 </div>
