--- a/app/22busscustomer/views/supplierlist.html
+++ b/app/22busscustomer/views/supplierlist.html
@@ -6,11 +6,11 @@
     <thead>
       <tr>
         <th class="col-md-1 text-center">供应商名称</th>
-        <th class="col-md-1 text-center">联系人</th>
+        <th class="col-md-1 text-center">联系人(电话)</th>
         <th class="col-md-1 text-center">商品类别</th>
         <th class="col-md-2 text-center">供应商简介</th>
         <th class="col-md-1 text-center">协助签约</th>
-        <th class="col-md-1 text-center">申请人(电话)</th>
+        <th class="col-md-1 text-center">申请人(日期)</th>
         <th class="col-md-1 text-center">修改时间</th>
         <th class="col-md-1 text-center">确认人</th>
         <th class="col-md-1 text-center">状态</th>
@@ -25,17 +25,18 @@
         </td>
         <td class="text-center">{{obj.sale_category}}</td>
         <td class="text-center">{{obj.supplier_profile}}</td>
-        <td class="text-center">{{obj.assist_sign}}</td>
+        
+        <td class="text-center">{{obj.assist_sign_name}}</td>
         <td class="text-center">{{obj.apply_name}}<br>{{obj.apply_date}}
         </td>
         <td class="text-center">{{obj.update_date}}</td>
         <td class="text-center">{{obj.confirm_name}}</td>
-        <td ng-show="obj.state =='0'" class="text-center">申请中</td>
-        <td ng-show="obj.state =='1'" class="text-center">已联系</td>
+        
+        <td class="text-center">{{obj.state_name}}</td>
         <td class="text-center">{{obj.remarks}}</td>
         <td class="text-center">
            <a ng-show="obj.state =='0'" ng-click="supplierconfirm(obj.id,obj.state,obj.confirm_name)" class="btn btn-danger btn-xs">确认</a>
-           <a ng-show="obj.state =='1'" ng-click="supplierconfirm(obj.id,obj.state,obj.confirm_name)" class="btn btn-success btn-xs">已确认</a>
+           <a ng-show="obj.state =='1'" ng-click="confirmed(obj.id,obj.state,obj.confirm_name)" class="btn btn-success btn-xs">已确认</a>
         </td>
 
       </tr>
