--- a/app/22busscustomer/views/supplyremark.html
+++ b/app/22busscustomer/views/supplyremark.html
@@ -4,7 +4,7 @@
     <div class="form-group">
         <label class="col-xs-2 control-label">备注</label>
         <div class="col-md-8">
-            <input type="text" class="form-control" id="inputpoolname" placeholder="** ** ** ** ** ** **" ng-model="confirminfo.remarks">
+            <input type="text" class="form-control" id="inputpoolname" placeholder="" ng-model="confirminfo.remarks">
         </div>
     </div>
 </div>
