--- a/app/21card/views/batchnumber.html
+++ b/app/21card/views/batchnumber.html
@@ -3,13 +3,13 @@
 <div class="panel-heading text-center">设置批次号</div>
 <div class="panel-body">
     <div class="form-group form-inline"> 
-        <label for="inputLottry" class="col-xs-0 col-md-offset-1 control-label">号段</label>&nbsp;&nbsp;
+        <label for="inputLottry" class="col-xs-0 col-md-offset-1 control-label">号段:</label>&nbsp;&nbsp;
 	    <input type="text" class="form-control" placeholder="起始卡号"
 			disabled ng-model="cardnuminfo.scard" style="width:200px">
         &nbsp;&nbsp;<label>到</label>&nbsp;&nbsp;
 	    <input type="text" class="form-control" placeholder="结束卡号"
 			disabled ng-model="cardnuminfo.ecard" style="width:200px">
-	    <label for="inputLottry" class="col-xs-offset-3 control-label">数量</label>&nbsp;&nbsp;
+	    <label for="inputLottry" class="col-xs-offset-3 control-label">数量:</label>&nbsp;&nbsp;
         <p id="disabledInput" type="text" class="form-control mt10" id="inputLottry" placeholder="数量" disabled ng-model="cardinfo.sumcard" style="width:200px">{{cardnuminfo.ecard - cardnuminfo.scard + 1}} 
 	    </p>     
     </div>
