--- a/app/21card/views/addcardpool.html
+++ b/app/21card/views/addcardpool.html
@@ -19,7 +19,7 @@
 	<label class="col-xs-3 control-label">卡池类型:</label>
 	  <div class="col-xs-9">
          <select class="form-control" ng-model="cardinfo.pool_type">
-            <option value="0">普通卡</option>
+            <option value="0">基本</option>
             <option value="1">金卡</option>
           <select>
       </div>  
