--- a/app/21card/views/cardorderlist.html
+++ b/app/21card/views/cardorderlist.html
@@ -43,7 +43,7 @@
                   &nbsp;&nbsp;
 
 
-                  <button type="button" class="btn btn-default search pull-right" ng-click="load()">立即搜索</button>
+                  <button type="button" class="btn btn-primary search pull-right" ng-click="load()">立即搜索</button>
 
               </div>   
 
@@ -58,6 +58,7 @@
     </div>
 </div><!-- searchArea -->
 
+<div class="col-md-12 panel panel-default table-responsive">
 <table class="table table-hover table-bordered">
   <thead>
     <tr>
@@ -87,7 +88,7 @@
     
   </tbody>
 </table>
-
+</div>
 
   <div class="text-right">
 
