--- a/app/21card/views/cardproductlist.html
+++ b/app/21card/views/cardproductlist.html
@@ -3,12 +3,12 @@
     <div class="panel-body">
         <div class="form-group form-inline">
             <div class="col-sm-12">
-                  <input type="text" class="form-control" ng-model="searchform.name" placeholder="卡产品名称">
+                  <input type="text" class="form-control" ng-model="searchform.name" placeholder="卡产品名称" style="width:250px">
                   &nbsp;&nbsp;&nbsp;&nbsp;
 
 
-                  <button type="button" class="btn btn-default search pull-right" ng-click="create()">创建卡产品</button>
-                  <button type="button" class="btn btn-default search pull-right" ng-click="search()">立即搜索</button>
+                  <button type="button" class="btn btn-success search pull-right" ng-click="create()">创建卡产品</button>
+                  <button type="button" class="btn btn-primary search pull-right" ng-click="search()">立即搜索</button>
 
 
             </div>
@@ -16,7 +16,7 @@
     </div>
 </div><!-- searchArea -->
 
-
+  <div class="col-md-12 panel panel-default table-responsive">
   <table class="table table-bordered">
     <thead>
       <tr>
@@ -51,7 +51,7 @@
       </tr>
     </tbody>
   </table>
-
+  </div>
 
 <!--   <div class="text-right">
 
