--- a/app/21card/views/resivecardinfo.html
+++ b/app/21card/views/resivecardinfo.html
@@ -1,15 +1,16 @@
 
 <form class="form-horizontal" role="form"> 
-<h2>修改卡状态</h2>
+
 <div class="col-sm-12">
 <div class="panel panel-default">
+<div class="panel-heading text-center">修改卡状态</div>
     <div class="panel-body">
         <div class="form-group form-inline">
             <div class="col-sm-12">
                 <label>卡号</label>&nbsp;&nbsp;
-                <input type="text" class="form-control" ng-model="cardinfo.cardno" style="width:300px">
+                <input type="text" class="form-control" ng-model="cardinfo.cardno" style="width:150px">
                 &nbsp;&nbsp;&nbsp;&nbsp;
-                  <button type="button" class="btn btn-default search pull-right" ng-click="queryuser()">查询</button>
+                  <button type="button" class="btn btn-primary search pull-right" ng-click="queryuser()">查询</button>
 
 
             </div>
