--- a/app/21card/views/reviseinfo.html
+++ b/app/21card/views/reviseinfo.html
@@ -6,19 +6,19 @@
 
 <div class="col-xs-12 form-horizontal" >
   <div class="form-group">
-		<label class="col-xs-2 control-label">卡池名称</label>
+		<label class="col-xs-1 control-label">卡池名称</label>
 		<div class="col-xs-2">
 			<input type="text" class="form-control" placeholder="卡池名称"
-			ng-model="cardinfo.pool_name" style="width:200px">
+			ng-model="cardinfo.pool_name" style="width:250px">
 		</div>
-		<label for="inputDate" class="col-md-2 control-label">卡池类型</label>
-		<div class="col-md-2">
+		<label for="inputDate" class="col-md-3 control-label">卡池类型</label>
+		<div class="col-md-3">
             <select class="form-control" ng-model="cardinfo.pool_type">
                <option value="0">基本</option>
                <option value="1">金卡</option>
             <select>  
         </div>
-        <button type="button" class="btn btn-info col-xs-offset-1" ng-click="savecardpool()" style="width:200px;">修改<button>
+        <button type="button" class="btn btn-info  pull-right" ng-click="savecardpool()" style="width:100px;">修改<button>
          
   </div>
 </div>
