--- a/app/21card/views/basecardlist.html
+++ b/app/21card/views/basecardlist.html
@@ -21,7 +21,7 @@
                     <option value="2">制作中</option>
                     <option value="1">已制作</option>
                   </select>
-                  <button type="button" class="btn btn-primary search pull-right" ng-click="searchcard(searchform.startcard, searchform.endcard, searchform.cardmakestatus, searchform.cardbatch, searchform.cardgivetatus)">立即搜索</button>
+                  <button type="button" class="btn btn-primary search pull-right" ng-click="search(searchform.startcard, searchform.endcard, searchform.cardmakestatus, searchform.cardbatch, searchform.cardgivetatus)">立即搜索</button>
 
 
             </div>
